Ensure new menu design is not visible behind standard pages

--- a/src/scss/layout/_base.scss
+++ b/src/scss/layout/_base.scss
@@ -13,6 +13,10 @@ $sw: 10px; // screen outline width (padding)
 
 // default styling for otherwise unstyled pages
 .page {
-	max-width: 70ch;
-	margin: 1em auto 4em auto;
+	article {
+		max-width: 70ch;
+		padding-top: 4em;
+		margin: 0em auto 4em auto;
+	}
+	background: yellow;
 }
